# tesselate

./: README.md  TrimmedSplineProjector.md  triangle_tests.py
AISearch/: ai_cli.py
compit/: app.py  create_charts.bat  pyproject.toml
compit/taxonomy/: load_taxonomy.py  mappings.py  ocx_taxonomy.py  ship_taxonomy.py  taxonomy.py  taxonomy_common.py  validation.py
tesselate/: README.md  multi_nurbs_intersectioning.py  pyproject.toml  surface_clipping_pipeline.md
xml-schema/: .pre-commit-config.yaml  Makefile  environment.yml  unitsml.xsd
